plugins {
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version "1.1.4"
	id 'java'
}

group = 'pt.photuseretratus'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	//SpringBoot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework:spring-context-support:6.1.2'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//Mail
	implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
	//Zip
	implementation 'net.lingala.zip4j:zip4j:2.11.3'
	//Imagekit io
	implementation 'com.github.imagekit-developer:imagekit-java:1.0.3'
	//GSON
	implementation 'com.google.code.gson:gson:2.9.0'
	//JWT
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	//Encrypt
	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
	//Logger
	implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
	implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
	//lombok
	implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

}

bootJar{
	rootSpec.filesMatching('**/*.jar', { jar ->
		// only rename jars which are going into the lib dir into the fat jar
		if (jar.path.startsWith("BOOT-INF/lib")) {
			String groupId = jar.file.parentFile.parentFile.parentFile.parentFile.name
			jar.name = "$groupId-${jar.name}"
		}
	})

	duplicatesStrategy(DuplicatesStrategy.FAIL)
}

tasks.named('jar') {
	manifest {
		attributes(
				'Implementation-Title': project.name,
				'Implementation-Version': project.version)
	}
}

